--- a/Functions/functions.html
+++ b/Functions/functions.html
@@ -101,6 +101,14 @@
             console.log(x*y);
         })(5,6);
 
+        // Arrow Function :- Arrow functions were introduced in ES6. Arrow functions allow us to write shorter function syntax:
+        const arrowFunc=(a,b)=>{
+            return a+b;
+        }
+
+        console.log(arrowFunc(3,9));
+        
+
 
 
 
