--- a/REGEX/regex-challenge.html
+++ b/REGEX/regex-challenge.html
@@ -65,8 +65,8 @@
     </div>
 
     <script>
-        // const btnClick = document.getElementById('btn');
         
+        // Validation of username, email, password and mobile number
         const validateForm = ()=>{
             const userName = document.getElementById('username').value;
             const emailId = document.getElementById('email').value;
