--- a/Banking Project/index.html
+++ b/Banking Project/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">fakeBank</a>
+            <a class="navbar-brand" href="#">Bank</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -23,13 +23,15 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 </ul>
-                <form class="d-flex" role="search" id="doNotDisplay">
-                    <input class="form-control me-2" type="text" placeholder="Username" aria-label="Search"
+                <div id="d-none">
+                    <form class="d-flex" role="search" id="doNotDisplay" onsubmit="return false;">
+                        <input class="form-control me-2" type="text" placeholder="Username" aria-label="Search"
                         id="userInput">
-                    <input class="form-control me-2" type="text" placeholder="Password" aria-label="Search"
+                        <input class="form-control me-2" type="password" placeholder="Password" aria-label="Search"
                         id="passInput">
-                    <button class="btn btn-outline-success" type="submit" onclick="loginFunc()">&#x2192</button>
-                </form>
+                        <button class="btn btn-outline-success" type="submit" onclick="loginFunc()">&#x2192</button>
+                    </form>
+                </div>
             </div>
         </div>
     </nav>
